fix: fix layout bugs

--- a/components/about/about.module.scss
+++ b/components/about/about.module.scss
@@ -31,7 +31,7 @@
 }
 
 .title {
-  font-size: 46px;
+  font-size: 40px;
   font-weight: 800;
   line-height: 58px;
   margin-bottom: 12px;
