--- a/components/gallery/gallery.module.scss
+++ b/components/gallery/gallery.module.scss
@@ -15,7 +15,7 @@
   text-align: center;
   max-width: 35%;
   margin: 20px auto;
-  font-size: 36px;
+  font-size: 34px;
   font-weight: 700;
   line-height: 58px;
   color: #2a3549;
