--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -20,6 +20,10 @@
 }
 
 .title {
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
   transition: color 0.3s ease, text-shadow 0.3s ease;
   cursor: pointer;
 
