--- a/components/services/services.module.scss
+++ b/components/services/services.module.scss
@@ -3,7 +3,7 @@
 .title {
   max-width: 50%;
   margin: 20px auto;
-  font-size: 40px;
+  font-size: 34px;
   font-weight: 800;
   line-height: 58px;
   color: #2a3549;
